# gcom

./: .gitignore  CMakeLists.txt  README.md  endpoint.hpp  gcom.hpp  ring_buffer.hpp  socket.cpp  socket.hpp  stream.cpp  stream.hpp  stream_recv.cpp  stream_recv.hpp  stream_send.cpp  stream_send.hpp  timeout_manager.hpp
test_send_all/: CMakeLists.txt  README.md  server.cpp
tests/: test_ring_buffer.cpp
